kubernetes/apps/talos1018/adsb/planefinder/app/deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planefinder
  labels:
    app.kubernetes.io/name: planefinder
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: planefinder
  template:
    metadata:
      labels:
        app.kubernetes.io/name: planefinder
    spec:
      containers:
        - name: planefinder
          image: ghcr.io/sdr-enthusiasts/docker-planefinder:latest-build-427
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              add: [CHOWN, SETUID, SETGID]
              drop: [ALL]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 30053
          resources:
            limits:
              cpu: "0.02"
              memory: "50Mi"
            requests:
              cpu: "0.004"
              memory: "10Mi"
