kubernetes/apps/talos1018/adsb/planefinder/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: planefinder
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: ADSB
    gethomepage.dev/icon: mdi-airplane
    gethomepage.dev/name: planefinder
    gethomepage.dev/app: planefinder
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "planefinder.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: planefinder
          port: 30053
